--- a/docs/latex/test__time__management_8cpp.tex
+++ b/docs/latex/test__time__management_8cpp.tex
@@ -28,7 +28,7 @@ boolean \mbox{\hyperlink{test__time__management_8cpp_ad26ff1c7b4c3bb2f4a1fb0ee31
 \begin{DoxyCompactList}\small\item\em Unit test for the function \char`\"{}turn\+\_\+seconds\+\_\+in\+\_\+time\char`\"{}. \end{DoxyCompactList}\item 
 boolean \mbox{\hyperlink{test__time__management_8cpp_a7beae3d56bddfc62d5ad4d00e31a4029}{test\+\_\+add\+\_\+time}} ()
 \begin{DoxyCompactList}\small\item\em Unit test for the function \char`\"{}add\+\_\+time\char`\"{}. \end{DoxyCompactList}\item 
-boolean \mbox{\hyperlink{test__time__management_8cpp_a1e3f5cd42c40520d5fbfc9c70ba58f76}{test\+\_\+get\+\_\+\+N\+T\+P\+\_\+time}} ()
+boolean \mbox{\hyperlink{test__time__management_8cpp_a6e27ce37b55f747d8bd8ddf243400644}{test\+\_\+init\+\_\+time}} ()
 \begin{DoxyCompactList}\small\item\em Unit test for the function \char`\"{}get\+\_\+\+N\+T\+P\+\_\+time\char`\"{}. \end{DoxyCompactList}\item 
 boolean \mbox{\hyperlink{test__time__management_8cpp_a57bbab4c6324d9f66a780319aa1c1866}{test\+\_\+check\+\_\+and\+\_\+update\+\_\+offset}} ()
 \begin{DoxyCompactList}\small\item\em Unit test for the function \char`\"{}check\+\_\+and\+\_\+update\+\_\+offset\char`\"{}. \end{DoxyCompactList}\end{DoxyCompactItemize}
@@ -140,11 +140,11 @@ boolean -\/ true if the test passed, false if the test failed
 \begin{DoxySeeAlso}{See also}
 \mbox{\hyperlink{time__management_8cpp_a79f5fec2131038665d4240b7b761f15a}{get\+\_\+current\+\_\+time}} 
 \end{DoxySeeAlso}
-\mbox{\Hypertarget{test__time__management_8cpp_a1e3f5cd42c40520d5fbfc9c70ba58f76}\label{test__time__management_8cpp_a1e3f5cd42c40520d5fbfc9c70ba58f76}} 
-\index{test\_time\_management.cpp@{test\_time\_management.cpp}!test\_get\_NTP\_time@{test\_get\_NTP\_time}}
-\index{test\_get\_NTP\_time@{test\_get\_NTP\_time}!test\_time\_management.cpp@{test\_time\_management.cpp}}
-\doxysubsubsection{\texorpdfstring{test\_get\_NTP\_time()}{test\_get\_NTP\_time()}}
-{\footnotesize\ttfamily boolean test\+\_\+get\+\_\+\+N\+T\+P\+\_\+time (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+\mbox{\Hypertarget{test__time__management_8cpp_a6e27ce37b55f747d8bd8ddf243400644}\label{test__time__management_8cpp_a6e27ce37b55f747d8bd8ddf243400644}} 
+\index{test\_time\_management.cpp@{test\_time\_management.cpp}!test\_init\_time@{test\_init\_time}}
+\index{test\_init\_time@{test\_init\_time}!test\_time\_management.cpp@{test\_time\_management.cpp}}
+\doxysubsubsection{\texorpdfstring{test\_init\_time()}{test\_init\_time()}}
+{\footnotesize\ttfamily boolean test\+\_\+init\+\_\+time (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
 
 
