--- a/docs/latex/workflows_8h.tex
+++ b/docs/latex/workflows_8h.tex
@@ -271,7 +271,7 @@ String -\/ message that will be displayed on the webpage\+:~\newline
 \char`\"{}success message\char`\"{} -\/ if signal was saved~\newline
 \char`\"{}error message\char`\"{} -\/ no signal was captured
 \end{DoxyReturn}
-This function records a signal and saves it to a file in the Litte\+FS with the signals name. Here is the call graph for this function\+:\nopagebreak
+This function records a signal and saves it to a file in the Litte\+FS with the signals name. (spaces at the end of the signal name will be removed) Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
