--- a/docs/latex/empirical__tests_8cpp.tex
+++ b/docs/latex/empirical__tests_8cpp.tex
@@ -6,8 +6,7 @@ collection of empirical tests
 
 
 {\ttfamily \#include \char`\"{}tests.\+h\char`\"{}}\newline
-Include dependency graph for empirical\+\_\+tests.\+cpp\+:
-\nopagebreak
+Include dependency graph for empirical\+\_\+tests.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
