--- a/docs/latex/filesystem_8cpp.tex
+++ b/docs/latex/filesystem_8cpp.tex
@@ -6,8 +6,7 @@ In this file, all functions related to the filesystem are defined.
 
 
 {\ttfamily \#include \char`\"{}base.\+h\char`\"{}}\newline
-Include dependency graph for filesystem.\+cpp\+:
-\nopagebreak
+Include dependency graph for filesystem.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
