--- a/docs/latex/main_8cpp.tex
+++ b/docs/latex/main_8cpp.tex
@@ -6,8 +6,7 @@ Main file of the program.
 
 
 {\ttfamily \#include \char`\"{}main.\+h\char`\"{}}\newline
-Include dependency graph for main.\+cpp\+:
-\nopagebreak
+Include dependency graph for main.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
