--- a/docs/latex/test__time__management_8cpp.tex
+++ b/docs/latex/test__time__management_8cpp.tex
@@ -6,8 +6,7 @@ This file contains unit tests for all functions from the \mbox{\hyperlink{time__
 
 
 {\ttfamily \#include \char`\"{}tests.\+h\char`\"{}}\newline
-Include dependency graph for test\+\_\+time\+\_\+management.\+cpp\+:
-\nopagebreak
+Include dependency graph for test\+\_\+time\+\_\+management.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
