--- a/docs/latex/tests_8h.tex
+++ b/docs/latex/tests_8h.tex
@@ -6,8 +6,7 @@ Header File for all test files.
 
 
 {\ttfamily \#include \char`\"{}workflows.\+h\char`\"{}}\newline
-Include dependency graph for tests.\+h\+:
-\nopagebreak
+Include dependency graph for tests.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -161,8 +160,7 @@ Here is the call graph for this function\+:\nopagebreak
 \includegraphics[width=350pt]{tests_8h_a76d71e77bfa42929b874bbdfbe896517_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -199,7 +197,7 @@ Here is the caller graph for this function\+:
 \begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[width=350pt]{tests_8h_a54d5f87e6031ca9d0ce27d48e6079032_icgraph}
+\includegraphics[width=302pt]{tests_8h_a54d5f87e6031ca9d0ce27d48e6079032_icgraph}
 \end{center}
 \end{figure}
 \mbox{\Hypertarget{tests_8h_ae3c32f603677f6b9f8616bb50afc6a32}\label{tests_8h_ae3c32f603677f6b9f8616bb50afc6a32}} 
@@ -222,14 +220,6 @@ Here is the call graph for this function\+:\nopagebreak
 \begin{center}
 \leavevmode
 \includegraphics[height=550pt]{tests_8h_ae3c32f603677f6b9f8616bb50afc6a32_cgraph}
-\end{center}
-\end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
-\begin{figure}[H]
-\begin{center}
-\leavevmode
-\includegraphics[width=239pt]{tests_8h_ae3c32f603677f6b9f8616bb50afc6a32_icgraph}
 \end{center}
 \end{figure}
 \mbox{\Hypertarget{tests_8h_aa7d1d7dcdf9dfb99e8af73d4adea3d9e}\label{tests_8h_aa7d1d7dcdf9dfb99e8af73d4adea3d9e}} 
@@ -262,7 +252,7 @@ Here is the caller graph for this function\+:
 \begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[width=350pt]{tests_8h_aa7d1d7dcdf9dfb99e8af73d4adea3d9e_icgraph}
+\includegraphics[width=343pt]{tests_8h_aa7d1d7dcdf9dfb99e8af73d4adea3d9e_icgraph}
 \end{center}
 \end{figure}
 \mbox{\Hypertarget{tests_8h_a00ef4d5ed3618cf7ba7f43447acef68b}\label{tests_8h_a00ef4d5ed3618cf7ba7f43447acef68b}} 
@@ -295,7 +285,7 @@ Here is the caller graph for this function\+:
 \begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[width=350pt]{tests_8h_a00ef4d5ed3618cf7ba7f43447acef68b_icgraph}
+\includegraphics[width=329pt]{tests_8h_a00ef4d5ed3618cf7ba7f43447acef68b_icgraph}
 \end{center}
 \end{figure}
 \mbox{\Hypertarget{tests_8h_a7beae3d56bddfc62d5ad4d00e31a4029}\label{tests_8h_a7beae3d56bddfc62d5ad4d00e31a4029}} 
