--- a/docs/latex/time__management_8cpp.tex
+++ b/docs/latex/time__management_8cpp.tex
@@ -6,8 +6,7 @@ This file contains the functions to manage the time.
 
 
 {\ttfamily \#include \char`\"{}base.\+h\char`\"{}}\newline
-Include dependency graph for time\+\_\+management.\+cpp\+:
-\nopagebreak
+Include dependency graph for time\+\_\+management.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
