--- a/docs/latex/workflows_8cpp.tex
+++ b/docs/latex/workflows_8cpp.tex
@@ -6,8 +6,7 @@ This file contains high level functions.
 
 
 {\ttfamily \#include \char`\"{}workflows.\+h\char`\"{}}\newline
-Include dependency graph for workflows.\+cpp\+:
-\nopagebreak
+Include dependency graph for workflows.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
