--- a/docs/latex/workflows_8h.tex
+++ b/docs/latex/workflows_8h.tex
@@ -7,8 +7,7 @@ Header file for \mbox{\hyperlink{workflows_8cpp}{workflows.\+cpp}}.
 
 {\ttfamily \#include \char`\"{}base.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}Regexp.\+h\char`\"{}}\newline
-Include dependency graph for workflows.\+h\+:
-\nopagebreak
+Include dependency graph for workflows.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
