--- a/docs/latex/base_8h.tex
+++ b/docs/latex/base_8h.tex
@@ -16,16 +16,14 @@ Header file for \mbox{\hyperlink{filesystem_8cpp}{filesystem.\+cpp}} and \mbox{\
 {\ttfamily \#include $<$E\+S\+P8266\+Wi\+Fi.\+h$>$}\newline
 {\ttfamily \#include $<$N\+T\+P\+Client.\+h$>$}\newline
 {\ttfamily \#include $<$Wi\+Fi\+Udp.\+h$>$}\newline
-Include dependency graph for base.\+h\+:
-\nopagebreak
+Include dependency graph for base.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=350pt]{base_8h__incl}
 \end{center}
 \end{figure}
-This graph shows which files directly or indirectly include this file\+:
-\nopagebreak
+This graph shows which files directly or indirectly include this file\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
