--- a/docs/latex/main_8h.tex
+++ b/docs/latex/main_8h.tex
@@ -11,8 +11,7 @@ Header File for \mbox{\hyperlink{main_8cpp}{main.\+cpp}}.
 {\ttfamily \#include \char`\"{}workflows.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}website\+\_\+string.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}tests.\+h\char`\"{}}\newline
-Include dependency graph for main.\+h\+:
-\nopagebreak
+Include dependency graph for main.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
