--- a/docs/latex/test__main_8cpp.tex
+++ b/docs/latex/test__main_8cpp.tex
@@ -6,8 +6,7 @@ main file for all tests
 
 
 {\ttfamily \#include \char`\"{}tests.\+h\char`\"{}}\newline
-Include dependency graph for test\+\_\+main.\+cpp\+:
-\nopagebreak
+Include dependency graph for test\+\_\+main.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -60,8 +59,7 @@ Here is the call graph for this function\+:\nopagebreak
 \includegraphics[width=350pt]{test__main_8cpp_a76d71e77bfa42929b874bbdfbe896517_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -98,7 +96,7 @@ Here is the caller graph for this function\+:
 \begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[width=350pt]{test__main_8cpp_a54d5f87e6031ca9d0ce27d48e6079032_icgraph}
+\includegraphics[width=302pt]{test__main_8cpp_a54d5f87e6031ca9d0ce27d48e6079032_icgraph}
 \end{center}
 \end{figure}
 \mbox{\Hypertarget{test__main_8cpp_ae3c32f603677f6b9f8616bb50afc6a32}\label{test__main_8cpp_ae3c32f603677f6b9f8616bb50afc6a32}} 
@@ -121,14 +119,6 @@ Here is the call graph for this function\+:\nopagebreak
 \begin{center}
 \leavevmode
 \includegraphics[height=550pt]{test__main_8cpp_ae3c32f603677f6b9f8616bb50afc6a32_cgraph}
-\end{center}
-\end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
-\begin{figure}[H]
-\begin{center}
-\leavevmode
-\includegraphics[width=239pt]{test__main_8cpp_ae3c32f603677f6b9f8616bb50afc6a32_icgraph}
 \end{center}
 \end{figure}
 \mbox{\Hypertarget{test__main_8cpp_aa7d1d7dcdf9dfb99e8af73d4adea3d9e}\label{test__main_8cpp_aa7d1d7dcdf9dfb99e8af73d4adea3d9e}} 
@@ -161,7 +151,7 @@ Here is the caller graph for this function\+:
 \begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[width=350pt]{test__main_8cpp_aa7d1d7dcdf9dfb99e8af73d4adea3d9e_icgraph}
+\includegraphics[width=343pt]{test__main_8cpp_aa7d1d7dcdf9dfb99e8af73d4adea3d9e_icgraph}
 \end{center}
 \end{figure}
 \mbox{\Hypertarget{test__main_8cpp_a00ef4d5ed3618cf7ba7f43447acef68b}\label{test__main_8cpp_a00ef4d5ed3618cf7ba7f43447acef68b}} 
@@ -194,6 +184,6 @@ Here is the caller graph for this function\+:
 \begin{figure}[H]
 \begin{center}
 \leavevmode
-\includegraphics[width=350pt]{test__main_8cpp_a00ef4d5ed3618cf7ba7f43447acef68b_icgraph}
+\includegraphics[width=329pt]{test__main_8cpp_a00ef4d5ed3618cf7ba7f43447acef68b_icgraph}
 \end{center}
 \end{figure}
