--- a/docs/latex/test__workflows_8cpp.tex
+++ b/docs/latex/test__workflows_8cpp.tex
@@ -6,8 +6,7 @@ This file contains unit tests for all functions from the \mbox{\hyperlink{workfl
 
 
 {\ttfamily \#include \char`\"{}tests.\+h\char`\"{}}\newline
-Include dependency graph for test\+\_\+workflows.\+cpp\+:
-\nopagebreak
+Include dependency graph for test\+\_\+workflows.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
